
      2.14: In progress...

       NEW: Start/stop DSP via remote control.
       NEW: Device scan button in Configure I/O devices dialog.
       NEW: Added "Recent settings" menu.
       NEW: Added synchronous AM demodulator.
       NEW: Added band plan to bottom of FFT.
     FIXED: PortAudio detection on MacOS.
     FIXED: Crash when closing AFSK1200 decoder.


    2.13.5: Released November 7, 2020

     FIXED: Set correct buffer size for audio FFT.


    2.13.4: Released November 6, 2020

       NEW: Added man page for use by distributions.
     FIXED: Crash when time span is set and waterfall height is set to 0%.
     FIXED: Filter width is incorrectly set when demod is off.
  IMPROVED: Removed Boost.Format dependency.


    2.13.3: Released November 1, 2020

     FIXED: Crash when waterfall height is set to 100%.
  IMPROVED: Removed Boost.Program_options dependency.


    2.13.2: Released October 24, 2020

       NEW: Preliminary support for GNU Radio 3.9.
       NEW: Print UDP configuration.
       NEW: Viridis color map.
     FIXED: Loss of precision in the plotter's frequency axis.
     FIXED: Usability on smaller screen sizes.


    2.13.1: Released October 17, 2020

     FIXED: Crash when invalid sample rate is specified.
     FIXED: Decrease minimum size of FFT Settings panel.
     FIXED: Typos.
  IMPROVED: More Airspy HF+ sample rates added.


      2.13: Released October 16, 2020

       NEW: Stereo option for UDP streaming.
       NEW: Script to generate AppImage.
       NEW: Allow scroll wheel direction to be inverted.
     FIXED: FM de-emphasis causing audio to be 20 dB quieter than it should be.
     FIXED: FM de-emphasis applied incorrectly in WFM stereo receiver.
     FIXED: Update waterfall time resolution when FFT settings are changed.
     FIXED: Update waterfall time resolution when window is resized.
     FIXED: Restore waterfall time span between sessions.
     FIXED: FFT buffer overlap calculation.